REGRESSION(91209?): fast/css/custom-font-xheight.html is failing on Leopard https://bugs.webkit.org/show_bug.cgi?id=64767

Reviewed by Sam Weinig.

* platform/graphics/Font.h:
* platform/graphics/cocoa/FontPlatformDataCocoa.mm:
(WebCore::FontPlatformData::ctFont): Undo the cascade list optimization on Leopard for custom
fonts, because adding a cascade list apparently breaks the font.



Canonical link: https://commits.webkit.org/80477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91229 268f45cc-cd09-0410-ab3c-d52691b4dbfc